<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".NewMember">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInLayNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/txtInLayTglLahir"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:errorEnabled="true">-->

        <EditText
            android:id="@+id/edt_Tgl_Lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tanggal_lahir" />
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInLayAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInLayJenisKelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <Spinner
                android:id="@+id/spin_jenis_kelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:entries="@array/Jenis_Kelamin"/>
        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtJenisKelamin"
        app:layout_constraintTop_toBottomOf="@+id/txtJenisKelamin"
        app:layout_constraintVertical_bias="0.32">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_background_button"
        android:text="@string/simpan"
        android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>